Fixing project.clj formatting, removing a bunch of comments